--- a/templates/header.htm
+++ b/templates/header.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -6,50 +5,51 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{{title}}</title>
+<title>Untitled Document</title>
 <link href="/misc/style.css" rel="stylesheet" type="text/css" />
+<link href="/misc/sty.css" rel="stylesheet" type="text/css" />
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 </head>
-
+{% load tagsfilter %}
 <body>
 <div align="center" >
-<div style="width:100%">
-<div style="width:1020px; border:solid 1px #c6c6c6; border-bottom:none;  -webkit-box-shadow:0 0px 8px rgba(0,0,0,0.3); -moz-box-shadow:0 0 8px rgba(0,0,0,0.3); box-shadow:0 0 8px rgba(0,0,0,0.3);">
-<div style="width:1002px">
-<div style="clear:both" class="top-area">
-<div style="clear:both; padding-top:13px; height:60px;">
-<div style="float:left; width:239px;" class="num"><span class="num-txt">Phone: </span>772-462-0203</div>
+<div class="per100%">
+<div class="new-body">
+<div class="wid1002">
+<div class="clr top-area">
+<div class="clr height60 padtop13">
+<div class="num_bg num"><span class="num-txt">Phone: </span>772-462-0203</div>
 
-<a href="http://www.saltwaterfish.com/Returns-Guarantee_ep_78-1.html" target="_blank">
-<div style="float:left; width:187px">
-<div style="float:left"><img src="misc/images/15daysimage.jpg" border="0" /></div>
-<div style="float:left">
-<div style="clear:both" class="guarantee-text" >15 Day Live<br />
+<a href="/pages?pageid=78">
+<div class="float-left wid187">
+<div class="float-left"><img src="misc/images/15daysimage.jpg" border="0" /></div>
+<div class="float-left">
+<div class="clr guarantee-text" >15 Day Live<br />
 
 Guarantee</div>
-<div style="clear:both" class="see-details">See Details</div>
+<div class="clr see-details">See Details</div>
 
 </div>
 </div>
 </a>
-<a href="http://www.saltwaterfish.com/Shipping_ep_77-1.html" target="_blank">
-<div style="float:left; width:157px">
-<div style="float:left"><img src="misc/images/lowestshippingrates.jpg" width="48" height="44" border="0" /></div>
-<div style="float:left">
-<div style="clear:both" class="guarantee-text" >Lowest<br />
+<a href="/pages?pageid=77">
+<div class="float-left wid157">
+<div class="float-left"><img src="misc/images/lowestshippingrates.jpg" width="48" height="44" border="0" /></div>
+<div class="float-left">
+<div class="clr guarantee-text" >Lowest<br />
 
 Shipping Rates</div>
-<div style="clear:both" class="see-details">See Details</div>
+<div class="clr see-details">See Details</div>
 </div>
 </div>
 </a>
-<div style="float:left">
+<div class="float-left">
 <div>
 <ul id="menu">
 <li><a href="/">Home</a></li>
-<li style="padding-top:16px; padding-left:2px; padding-right:2px;"><img src="misc/images/divider.jpg" width="3" height="12" border="0" /></li>
+<li><div class="topmenu_divider"><img src="misc/images/divider.jpg" width="3" height="12" border="0" /></div></li>
 <li><a href="/myaccount" class="style1">My Account</a>
 <ul>
 <li><a href="/myaccount">My Account</a></li>
@@ -60,123 +60,140 @@ Shipping Rates</div>
 <li><a href="/logout">Logout</a></li>
 </ul>
 </li>
-<li style="padding-top:16px; padding-left:2px; padding-right:2px;"><img src="misc/images/divider.jpg" width="3" height="12" border="0" /></li>
-<li><a href="http://www.saltwaterfish.com/Contact-Us_ep_40.html" target="_blank">Contact us</a></li>
-<li style="padding-top:16px; padding-left:2px; padding-right:2px;"><img src="misc/images/divider.jpg" width="3" height="12" border="0" /></li>
-<li><a href="http://www.saltwaterfish.com/message.asp?msg=49" target="_blank">My Cart</a></li>
+<li><div class="topmenu_divider"><img src="misc/images/divider.jpg" width="3" height="12" border="0" /></div></li>
+<li><a href="/pages?pageid=40">Contact us</a></li>
+<li><div class="topmenu_divider"><img src="misc/images/divider.jpg" width="3" height="12" border="0" /></div></li>
+<li><a href="/viewcart">My Cart</a></li>
 </ul>
 </div>
 
 </div>
 
 </div>
-<div style="clear:both">
-<div style="float:left"><a href="/"><img src="misc/images/logo.png" width="426" height="93" border="0" /></a></div>
-<div style="float:right; margin-right:15px">
+<div class="clr">
+<div class="float-left"><a href="/"><img src="misc/images/logo.png" width="426" height="93" border="0" /></a></div>
+<div class="float-right marright15">
 <div class="search">
-<div style="float:left; width:230px;"><input name="Input" type="text"  placeholder="Search saltwaterfish.com"/></div>
-<div style="float:left; width:69px;"><input type="submit" name="Submit" value="Search" /></div>
+<div class="search1_box"><input name="Input" type="text"  placeholder="Search saltwaterfish.com"/></div>
+<div class="search1_submit"><input type="submit" name="Submit" value="Search" /></div>
 </div>
 </div>
 </div>
-<div style="clear:both;"></div>
-<div style="clear:both; margin-left:-30px;">
+<div class="clr"></div>
+<div class="clr mar-less">
 <div class="menu">
 <ul>
-<li><a href="http://www.saltwaterfish.com/Free-Shipping-Category-over-7999_c_298.html" target="_blank">Fish</a>
+<li><a href="/quicklist?cat=15">Fish</a>
 <ul>
 <li>
 <div class="sub_bg">
-<div class="text-top" style="clear:both; padding-left:20px;">Please select from the available Marine Fish Species below <br />or
-</div>
-<div style="clear:both; padding-top:20px;">
-<div class="sub_txt" style="float:left; width:113px; padding-left:20px;">
-<div style="clear:both;"><a href="#">Angelfish, Dwarf</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Angelfish, Large</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Anthias</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Basslets</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Batfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Blennies</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Butterflies</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Cardinals</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Clownfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Damsels</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Dottybacks</a></div>
-</div>
+<div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
+<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Fish</a></span>.</div>
+<div class="clr padtop20">
 
-<div class="sub_txt" style="float:left; width:113px; margin-left:80px;">
-<div style="clear:both;"><a href="#">Eels</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Frogfish</a> </div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Goatfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Gobies</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Groupers</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Hamlets</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Hawkfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Hogfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Lionfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Miscellaneous</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Puffers</a></div>
-</div>
+<table class="sub_txt " ><tr >
+{% for cats in "15"|categoriesdisplay %}
+   <td style="width:150px;"><a href="/category?id={{ cats.id }}">{{ cats.category_name }}</a><div class="line"></div></td>
+   {% if forloop.last %}
+     </tr>
+   {% else %}
+     {% if forloop.counter|divisibleby:"3" %}
+       </tr><tr>
+     {% endif %}
+   {% endif %}
+{% endfor %}
+</table>
 
-
-<div class="sub_txt" style="float:left; width:133px; margin-left:80px;">
-<div style="clear:both;"><a href="#">Rabbitfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Seahorses</a> </div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Squirrelfish</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Sweetlips</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Tangs</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Triggers</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Wrasses</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Wrasses Reef Safe</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Marine Plants</a></div>
-<div class="line"></div>
-<div style="clear:both;"><a href="#">Live Foods</a> </div>
+ 
 </div>
-</div>
-<div style="clear:both;">&nbsp;</div>
+<div class="clr">&nbsp;</div>
 </div>
 </li>
 </ul>
 </li>
-<li><a href="http://www.saltwaterfish.com/Invertebrates_c_17.html" target="_blank">Inverts</a>
+<li><a href="/quicklist?cat=17" >Inverts</a>
+<ul>
+<li>
+<div class="sub_bg">
+<div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
+<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Inverts</a></span>.</div>
+<div class="clr padtop20">
+<table class="sub_txt " ><tr >
+{% for cats in "17"|categoriesdisplay %}
+   <td style="width:150px;"><a href="/category?id={{ cats.id }}">{{ cats.category_name }}</a><div class="line"></div></td>
+   {% if forloop.last %}
+     </tr>
+   {% else %}
+     {% if forloop.counter|divisibleby:"3" %}
+       </tr><tr>
+     {% endif %}
+   {% endif %}
+{% endfor %}
+</table>
+</div>
+<div class="clr">&nbsp;</div>
+</div>
 </li>
-<li><a href="http://www.saltwaterfish.com/Coral_c_16.html" target="_blank">Corals</a></li>
-    <li><a href="http://www.saltwaterfish.com/Reef-Packages_c_2.html" target="_blank">Reef Packages</a></li>
-<li><a href="http://www.saltwaterfish.com/Live-Rock-Sand_c_4.html" target="_blank">Live Rock/Sand</a></li>
-<li><a href="#">Supplies</a></li>
-<li><a href="http://www.saltwaterfish.com/search.asp?keyword=OnSale&search.x=0&search.y=0" target="_blank">Free Shipping Store</a></li>
+</ul>
+</li>
+<li><a href="/quicklist?cat=16" target="_blank">Corals</a>
+<ul>
+<li>
+<div class="sub_bg">
+<div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
+<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Corals</a></span>.</div>
+<div class="clr padtop20">
+<table class="sub_txt " ><tr >
+{% for cats in "16"|categoriesdisplay %}
+   <td style="width:150px;"><a href="/category?id={{ cats.id }}">{{ cats.category_name }}</a><div class="line"></div></td>
+   {% if forloop.last %}
+     </tr>
+   {% else %}
+     {% if forloop.counter|divisibleby:"3" %}
+       </tr><tr>
+     {% endif %}
+   {% endif %}
+{% endfor %}
+</table>
+</div>
+<div class="clr">&nbsp;</div>
+</div>
+</li>
+</ul>
+</li>
+<li><a href="/quicklist?cat=2" >Reef Packages</a></li>
+<li><a href="/quicklist?cat=4" >Live Rock/Sand</a></li>
+<li><a href="/quicklist?cat=3">Supplies</a>
+<ul>
+<li>
+<div class="sub_bg">
+<div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
+<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Corals</a></span>.</div>
+<div class="clr padtop20">
+<table class="sub_txt " ><tr >
+{% for cats in "3"|categoriesdisplay %}
+   <td style="width:200px;"><a href="/category?id={{ cats.id }}">{{ cats.category_name }}</a><div class="line"></div></td>
+   {% if forloop.last %}
+     </tr>
+   {% else %}
+     {% if forloop.counter|divisibleby:"3" %}
+       </tr><tr>
+     {% endif %}
+   {% endif %}
+{% endfor %}
+</table>
+</div>
+<div class="clr">&nbsp;</div>
+</div>
+</li>
+</ul>
+</li>
+<li><a href="/quicklist?cat=298" target="_blank">Free Shipping Store</a></li>
 </ul>
 </div>
 </div>
 
 
+
 </div>
-<div class="grey-area clr">GREY AREA CMS Admin Control</div>
+<div class="clr grey-area">GREY AREA CMS Admin Control</div>
