--- a/templates/footer.htm
+++ b/templates/footer.htm
@@ -5,23 +5,23 @@
 <div class="float-left wid150">
 <ul class="footerlist" >
   <span class="footertitle">SHOP</span>
-<li class="padtop24"><a href="http://www.saltwaterfish.com/Fish_c_15.html" target="_blank">Saltwaterfish</a></li>
-<li><a href="http://www.saltwaterfish.com/Coral_c_16.html" target="_blank">Saltwater Corals</a></li>
-<li><a href="http://www.saltwaterfish.com/Invertebrates_c_17.html" target="_blank">Inverts</a></li>
-<li><a href="http://www.saltwaterfish.com/Reef-Packages_c_2.html" target="_blank">Reef Packages</a></li>
-<li><a href="http://www.saltwaterfish.com/Aquarium-Supplies_c_3.html" target="_blank">Aquarium Supplies</a></li>
-<li><a href="http://www.saltwaterfish.com/Gift-Certificate_p_11.html" target="_blank">Gidt Certificates</a></li>
+<li class="padtop24"><a href="/quicklist?cat=15"  >Saltwaterfish</a></li>
+<li><a href="/quicklist?cat=16"  >Saltwater Corals</a></li>
+<li><a href="/quicklist?cat=17"  >Inverts</a></li>
+<li><a href="/quicklist?cat=2"  >Reef Packages</a></li>
+<li><a href="/quicklist?cat=3"  >Aquarium Supplies</a></li>
+<li><a href="/quicklist?cat=11"  >Gidt Certificates</a></li>
 </ul>
 
 </div>
 <div class="float-left wid177"><div class="float-left wid150">
 <ul class="footerlist" >
   <span class="footertitle">SAVE</span>
-<li class="padtop24"><a href="http://www.saltwaterfish.com/Fish_c_224.html" target="_blank">Saltwaterfish on Sale</a></li>
-<li><a href="http://www.saltwaterfish.com/Coral_c_222.html" target="_blank">Sale Corals</a></li>
-<li><a href="http://www.saltwaterfish.com/Invertebrates_c_203.html" target="_blank">Invert on Sales</a></li>
-<li><a href="http://www.saltwaterfish.com/Reef-Packages_c_223.html" target="_blank">Reef Packages on Sale</a></li>
-<li><a href="http://www.saltwaterfish.com/Aquarium-Supplies_c_197.html" target="_blank">Aquarium Supplies on Sale </a></li>
+<li class="padtop24"><a href="/quicklist?cat=224"  >Saltwaterfish on Sale</a></li>
+<li><a href="/quicklist?cat=222"  >Sale Corals</a></li>
+<li><a href="/quicklist?cat=203"  >Invert on Sales</a></li>
+<li><a href="/quicklist?cat=223"  >Reef Packages on Sale</a></li>
+<li><a href="/quicklist?cat=197"  >Aquarium Supplies on Sale </a></li>
 <li><a href="specials.htm">Specials</a></li>
 </ul>
 
@@ -29,21 +29,21 @@
 <div class="float-left wid122"><div class="float-left wid150">
 <ul class="footerlist">
   <span class="footertitle">SERCIVE</span>
-<li class="padtop24"><a href="http://www.saltwaterfish.com/Free-FedEx-Shipping-Discount-Shipping-at-Saltwaterfishcom_ep_45-1.html" target="_blank">Shipping</a></li>
-<li><a href="http://www.saltwaterfish.com/Contact-Us_ep_40.html" target="_blank">Contact Us</a></li>
-<li><a href="http://www.saltwaterfish.com/Money-Back-Guarantee_ep_39-1.html" target="_blank">Returns</a></li>
-<li><a href="http://www.saltwaterfish.com/Reef-Rewards_ep_43-1.html" target="_blank">Reef Rewards</a></li>
-<li><a href="http://www.saltwaterfish.com/Terms-and-Conditions_ep_2-1.html" target="_blank">Terms and Condition</a></li>
+<li class="padtop24"><a href="http://www.saltwaterfish.com/Free-FedEx-Shipping-Discount-Shipping-at-Saltwaterfishcom_ep_45-1.html"  >Shipping</a></li>
+<li><a href="http://www.saltwaterfish.com/Contact-Us_ep_40.html"  >Contact Us</a></li>
+<li><a href="http://www.saltwaterfish.com/Money-Back-Guarantee_ep_39-1.html"  >Returns</a></li>
+<li><a href="http://www.saltwaterfish.com/Reef-Rewards_ep_43-1.html"  >Reef Rewards</a></li>
+<li><a href="http://www.saltwaterfish.com/Terms-and-Conditions_ep_2-1.html"  >Terms and Condition</a></li>
 <li><a href="guaranteeinfo.htm">Guarantee Info</a></li>
 </ul>
 
 </div></div>
 <div class="float-left wid176"><ul class="footerlist" >
   <span class="footertitle">RESOURCES</span>
-<li class="padtop24"><a href="http://www.saltwaterfish.com/product_index.asp" target="_blank">Product Index</a></li>
-<li><a href="http://www.saltwaterfish.com/category_index.asp" target="_blank">Cateogry Index</a></li>
-<li><a href="http://www.saltwaterfish.com/Acclimation_ep_48-1.html" target="_blank">Acclimation Video</a></li>
-<li><a href="http://forums.saltwaterfish.com/f/" target="_blank">Forum</a></li>
+<li class="padtop24"><a href="http://www.saltwaterfish.com/product_index.asp"  >Product Index</a></li>
+<li><a href="http://www.saltwaterfish.com/category_index.asp"  >Cateogry Index</a></li>
+<li><a href="http://www.saltwaterfish.com/Acclimation_ep_48-1.html"  >Acclimation Video</a></li>
+<li><a href="http://forums.saltwaterfish.com/f/"  >Forum</a></li>
 
 </ul>
 </div>
