--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -1,10 +1,43 @@
+{% include 'header.htm' %}
+{% include 'myaccount_widget.htm' %}
 <style type="text/css">
 <!--
 .style12 {color: #FF6600}
 .style13 {color: #FFFFFF}
 -->
 </style>
-{% include 'header.htm' %} 
+
+<script language="javascript" type="text/javascript" src="/misc/js/jquery-1.7.2.min.js"></script>
+<script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+
+<script>
+var address_type = 0;
+$(document).ready(function(){
+  $("button[id='cmdEditBillingAddress']").click(function(){
+    address_type = 1;
+	$("#BillingAddressView").hide();
+	$("#ShippingAddressView").show();
+    $("#BillingAddressForm").load("/getaddress?address_type=billing");	
+  });
+
+  $("button[id='cmdEditShippingAddress']").click(function(){
+    address_type = 2;
+	$("#ShippingAddressView").hide();
+	$("#BillingAddressView").show();
+    $("#ShippingAddressForm").load("/getaddress?address_type=shipping");
+  });
+
+});
+
+</script>
+ 
+{{request.session.customer.billing_firstname}}
+ 
+<div class="width10 float-left">&nbsp;&nbsp;</div>
+<div class="wid748 float-left">
+<div class="height12 clr"></div>
+<div  class=" clr">
+  <div >
 <table width="600" border="0" cellpadding="3">
   <tr>
     <td colspan="3"><table width="100%" cellpadding="0" cellspacing="0">
@@ -13,7 +46,8 @@
           <td align="left" colspan="2">&nbsp;</td>
         </tr>
         <tr>
-          <td align="left" colspan="2"><h2><span class="style3 style12">MY ACCOUNT</span></h2></td>
+          <td align="left"><h2><span class="style3 style12">MY ACCOUNT</span></h2></td>
+          <td align="right"><a href="changepwd">Change Password</a></td>
         </tr>
       </tbody>
     </table>    </td>
@@ -21,14 +55,14 @@
   <tr>
     <td colspan="2"><span class="style9">Welcome Back,&nbsp;{{customer.billing_firstname}} {{customer.billing_lastname}} </span><br />
       If you are not {{customer.billing_firstname}} {{customer.billing_lastname}} click <a href="#">here</a></td>
-    <td bgcolor="#FF6600"><span class="style13">LOGOUT</span></td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
     <td colspan="3"><span class="style11"><strong>Guarantee Request Credits/Gift Certificate Information&nbsp;</strong>(<a href="http://www.saltwaterfish.com/customercredits.asp?email=murthyp@expertsden.com" target="_blank">View Details</a>)</span></td>
   </tr>
   <tr>
     <td width="141"><span class="style11">Billing Information </span></td>
-    <td width="398"><table width="600" border="0" cellpadding="3">
+    <td width="398"><div id="BillingAddressForm"></div> <table width="600" border="0" cellpadding="3" id="BillingAddressView">
       <tr>
         <td class="style11">{{customer.billing_firstname}} {{customer.billing_lastname}} </td>
       </tr>
@@ -36,17 +70,21 @@
         <td class="style11">{{customer.billing_address1}} {{customer.billing_address2}} </td>
       </tr>
       <tr>
-        <td class="style11"><p>{{customer.billing_city}} {{customer.billing_state}} {{customer.billing_zip}} {{customer.billing_country}} </p></td>
+        <td class="style11"><p>{{customer.billing_city}} {{customer.billing_state}} {{customer.billing_zip}} {{customer.billing_country}} 
+          <label></label>
+        </p></td>
       </tr>
       <tr>
         <td class="style11">{{customer.billing_phone}}</td>
       </tr>
     </table></td>
-    <td width="35"><span class="style11"><a href="#">Update Address </a></span></td>
+    <td width="35"><p class="style11">&nbsp;</p>
+    <p class="style11">
+	  <button id="cmdEditBillingAddress">Edit</button>
   </tr>
   <tr>
     <td><span class="style11">Shipping Information </span></td>
-    <td><table width="600" border="0" cellpadding="3">
+    <td><div id="ShippingAddressForm"></div> <table width="600" border="0" cellpadding="3" id="ShippingAddressView">
       <tr>
         <td class="style11">{{customer.shipping_firstname}} {{customer.shipping_lastname}} </td>
       </tr>
@@ -60,7 +98,9 @@
         <td class="style11">{{customer.shipping_phone}}</td>
       </tr>
     </table></td>
-    <td><span class="style12"><a href="#">Update Address </a></span></td>
+    <td><span class="style12"><a href="#">
+      <button id="cmdEditShippingAddress">Edit</button>
+    </a></span></td>
   </tr>
   <tr>
     <td colspan="3"><p class="style11">Track Your Recent Orders (Guarantee Requests get submitted here!) (<a href="#">view all</a>) </p>    </td>
@@ -149,4 +189,8 @@
     </table></td>
   </tr>
 </table>
+</div></div>
+<div class="float-left width10"></div>
+
+</div>
 {% include 'footer.htm' %}
